# liquid-plastic-hyprpm

./: README.md  hyprpm.toml  main.cpp  plastic.glsl
liquid-plastic/: CMakeLists.txt  hyprpm.toml
